# pypi_tirupati27

./: @README.md  LICENSE  pyproject.toml
The_package/tirupati27/: __main__.py  text_attr.py  validate_rgb.py
